--- a/Text Prediction Model - Data Processing.Rmd
+++ b/Text Prediction Model - Data Processing.Rmd
@@ -74,7 +74,7 @@ formattable(data.overview,
 
 ## Data Sampling
 
-Since the dataset is so large, and due to hardware constrains, we will be using the 15% of the total data. We will join this subsets into one *coropra* and divide them to create three data sets: the **training set**, **validation set** and the **test set**. As a good practice, we will use the 70% of the *corpora* as our **training set**, 20% for our **validation set** and the other 10% as our **test set**.
+Since the dataset is so large, and due to hardware constrains, we will be using the 15% of the total data. We will join this subsets into one *corpora* and divide them to create three data sets: the **training set**, **validation set** and the **test set**. As a good practice, we will use the 70% of the *corpora* as our **training set**, 20% for our **validation set** and the other 10% as our **test set**.
 
 For practicity we will create separte testing, validation and training files for each one of the **Twitter**, **Blogs** and **News** data sets.
 
